--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.open-in-view=false
 
 #faz a conecção com o banco de dados
