Alterando caminho das imagens e copiando imagens para a pasta raiz do projeto

--- a/bin/main/application-prod.properties
+++ b/bin/main/application-prod.properties
@@ -12,11 +12,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.password=thiagogrego
 
 #caminho da pasta onde ficarão salvos os logotipos cadastrados no sistema
-bluefood.files.logotipo=C:/Users/THIAGO/Documents/images/logotipos
+bluefood.files.logotipo=/app/images/logotipos
 
 #caminho da pasta onde ficarão salvos as comidas cadastradas no sistema
-bluefood.files.comida=C:/Users/THIAGO/Documents/images/comidas
+bluefood.files.comida=/app/images/comidas
 
 #caminho da pasta onde ficarão salvos as cateogiras cadastradss no sistema
-bluefood.files.categoria=C:/Users/THIAGO/Documents/images/categorias
+bluefood.files.categoria=/app/images/categorias
 
